# domain/auth.go
@@ -1,0 +1,17 @@
+package domain
+
+import (
+	"net/http"
+
+	"github.com/go-chi/render"
+)
+
+type AuthResponse struct {
+	UserName string `json:"user"`
+	Key      string `json:"key"`
+}
+
+func (e *AuthResponse) Render(w http.ResponseWriter, r *http.Request) error {
+	render.Status(r, http.StatusCreated)
+	return nil
+}
